# resume

./: CMakeLists.txt  Dockerfile  bruteForceCombinations.c  buffer_library2.h  conclusion.c  conclusion2.c  dictionary.c  enter.c  interface.c  interface_test.c  pressing_setting.c  users.txt  zapustymany.c
